config/network-policy/allow-metrics-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/created-by: thanos-operator
    app.kubernetes.io/instance: allow-metrics-traffic
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: networkpolicy
    app.kubernetes.io/part-of: thanos-operator
    control-plane: controller-manager
  name: allow-metrics-traffic
  namespace: system
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          metrics: enabled
    ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Ingress
